--- a/Quiz_Challenge/index.html
+++ b/Quiz_Challenge/index.html
@@ -21,7 +21,7 @@
 
         <div id="questions" class="hide">
             <h2 id="question-title"></h2>
-            <div id="Choices" class="choices"></div>
+            <div id="choices" class="choices"></div>
         </div>
 
         <div id="end-screen" class="hide">
