--- a/Quiz_Challenge/index.html
+++ b/Quiz_Challenge/index.html
@@ -9,33 +9,36 @@
 </head>
 
 <body>
-       <div class="timer"> Time: <span id="time">0</span></div>
-    <div class="wrapper">
-        <div id="start-screen" class="start">
-            <h1> Coding Quiz Challenge</h1>
-            <p> Try to answer the following code related questions within the time limit. Keep in mind that incorrect
-                answers will penalize your score/time by 15 seconds. </p>
-            <button id="start">Start Quiz </button>
-        </div>
+    <div class="timer"> Time: <span id="time">0</span></div>
+    <div class="quiz">
+        <div class="wrapper">
+            <div id="start-screen" class="start">
+                <h1> Coding Quiz Challenge</h1>
+                <p> Try to answer the following code related questions within the time limit. Keep in mind that
+                    incorrect
+                    answers will penalize your score/time by 15 seconds. </p>
+                <button id="start">Start Quiz </button>
+            </div>
 
-        <div id="questions" class="hide">
-            <h2 id="question-title"></h2>
-            <div id="choices" class="choices"></div>
-        </div>
+            <div id="questions" class="hide">
+                <h2 id="question-title"></h2>
+                <div id="choices" class="choices"></div>
+            </div>
 
-        <div id="end-screen" class="hide">
-            <h2> All Done!</h2>
-            <p> Your final score is <span id="final-score"></span></p>
-            <p>Enter initials: <input type="text" id="initials" max="3" />
-                <button id="submit">Submit</button>
-            </p>
-        </div>
-        <div id="feedback" class="feedback hide"></div>
+            <div id="end-screen" class="hide">
+                <h2> All Done!</h2>
+                <p> Your final score is <span id="final-score"></span></p>
+                <p>Enter initials: <input type="text" id="initials" max="3" />
+                    <button id="submit">Submit</button>
+                </p>
+            </div>
+            <div id="feedback" class="feedback hide"></div>
 
+        </div>
+        <script src="./Assets/js/questions.js" type="module"></script>
+        <script src="./Assets/js/script.js" type="module"></script>
     </div>
-    <script src="./Assets/js/questions.js"></script>
-    <script src="./Assets/js/script.js"></script>
-
+    </div>
 
 </body>
 
