adding highscores html page

--- a/Quiz_Challenge/index.html
+++ b/Quiz_Challenge/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <link rel="scores" href="highscores.html">View Highscores</a></div>
     <div class="timer"> Time: <span id="time">0</span></div>
     <div class="quiz">
         <div class="wrapper">
