Fixing css style

--- a/Quiz_Challenge/highscores.html
+++ b/Quiz_Challenge/highscores.html
@@ -3,12 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./Assets/css/style.css" />
     <title>highscores</title>
 </head>
 <body>
     <div class="wrapper">
         <div id="highscores" class="scores">
             <h1> High Scores</h1>
-            
+   <a href="index.html"
+
+        <button id="go back">Go Back</button>           
+    </a>
+        <button id="clear Highscores">Clear High Scores</button>
+               
 </body>
 </html>
