--- a/Quiz_Challenge/index.html
+++ b/Quiz_Challenge/index.html
@@ -21,24 +21,25 @@
                 <button id="start">Start Quiz </button>
             </div>
 
-            <div id="questions" class="hide">
-                <h2 id="question-title"></h2>
-                <div id="choices" class="choices"></div>
-            </div>
+            <div class="app">
+                <div id="questions" class="hide">
+                    <h2 id="question-title"></h2>
+                    <div id="choices" class="choices"></div>
+                </div>
 
-            <div id="end-screen" class="hide">
-                <h2> All Done!</h2>
-                <p> Your final score is <span id="final-score"></span></p>
-                <p>Enter initials: <input type="text" id="initials" max="3" />
-                    <button id="submit">Submit</button>
-                </p>
-            </div>
-            <div id="feedback" class="feedback hide"></div>
+                <div id="end-screen" class="hide">
+                    <h2> All Done!</h2>
+                    <p> Your final score is <span id="final-score"></span></p>
+                    <p>Enter initials: <input type="text" id="initials" max="3" />
+                        <button id="submit">Submit</button>
+                    </p>
+                </div>
+                <div id="feedback" class="feedback"></div>
 
+            </div>
+            <script src="./Assets/js/questions.js" type="module"></script>
+            <script src="./Assets/js/script.js" type="module"></script>
         </div>
-        <script src="./Assets/js/questions.js" type="module"></script>
-        <script src="./Assets/js/script.js" type="module"></script>
-    </div>
     </div>
 
 </body>
