fixing highscores bug

--- a/Quiz_Challenge/highscores.html
+++ b/Quiz_Challenge/highscores.html
@@ -10,6 +10,7 @@
     <div class="wrapper">
         <div id="highscores" class="scores">
             <h1> High Scores</h1>
+            <ol id="list"></ol>
    <a href="index.html"
 
         <button id="go back">Go Back</button>           
