--- a/Quiz_Challenge/index.html
+++ b/Quiz_Challenge/index.html
@@ -24,7 +24,9 @@
             <div class="app">
                 <div id="questions" class="hide">
                     <h2 id="question-title"></h2>
-                    <div id="choices" class="choices"></div>
+                    <div id="choices" class="choices">
+                    </div>
+
                 </div>
 
                 <div id="end-screen" class="hide">
