--- a/Quiz_Challenge/highscores.html
+++ b/Quiz_Challenge/highscores.html
@@ -10,12 +10,12 @@
     <div class="wrapper">
         <div id="highscores" class="scores">
             <h1> High Scores</h1>
-            <ol id="list"></ol>
-   <a href="index.html"
-
-        <button id="go back">Go Back</button>           
-    </a>
+            <ol id="highscores"></ol>
+   <a href="index.html"><button>Go Back</button></button></a>
+     
         <button id="clear Highscores">Clear High Scores</button>
-               
+    </div>
+
+    <script src="./Assets/js/scores.js"></script>
 </body>
 </html>
